# jh-badge-tag-generator

./: .gitmodules  README.md  bottle-types.csv  data.py  main.py  pyproject.toml
static/: index.html  main.css  main.js
