[tool.poetry]
name = "jh-badge-tag-generator"
version = "0.1.0"
description = ""
authors = ["pajowu <git@ca.pajowu.de>"]
readme = "README.md"
packages = [{include = "jh_badge_tag_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
pydantic = "^1.10.8"
uvicorn = "^0.22.0"
solidpython2 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
